# OKseg

./: OK-Detection.bat  README.md  installment.py  pyproject.toml  requirements.txt
